--- a/Assignment/Assignment - II/app/build.gradle
+++ b/Assignment/Assignment - II/app/build.gradle
@@ -46,4 +46,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
 
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+    implementation 'com.firebaseui:firebase-ui-database:6.2.1'
 }
