--- a/Assignment/Assignment - II/app/src/main/AndroidManifest.xml
+++ b/Assignment/Assignment - II/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.gcit.groceryshop">
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -8,17 +9,22 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.GroceryShop">
-        <activity android:name=".PhotoUploadActivity"></activity>
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".RegisterActivity">
+        android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar">
+        <activity android:name=".UserDashboardActivity"
+            android:label="User Dashboard"></activity>
+        <activity android:name=".PhotoUploadActivity" />
+        <activity android:name=".LoginActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".RegisterActivity">
+        </activity>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
